--- a/TwitterSentimentAnalysis(DataExploration).ipynb
+++ b/TwitterSentimentAnalysis(DataExploration).ipynb
@@ -40,11 +40,7 @@
       "metadata": {
         "id": "id2oLZnmEAmg",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 53
-        },
-        "outputId": "0c4338ab-118f-45f8-8760-db015e6676b9"
+        "colab": {}
       },
       "source": [
         "!pip install -U -q PyDrive\n",
@@ -53,17 +49,8 @@
         "from google.colab import auth\n",
         "from oauth2client.client import GoogleCredentials"
       ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "\u001b[?25l\r\u001b[K     |▎                               | 10kB 21.6MB/s eta 0:00:01\r\u001b[K     |▋                               | 20kB 1.8MB/s eta 0:00:01\r\u001b[K     |█                               | 30kB 2.7MB/s eta 0:00:01\r\u001b[K     |█▎                              | 40kB 1.8MB/s eta 0:00:01\r\u001b[K     |█▋                              | 51kB 2.2MB/s eta 0:00:01\r\u001b[K     |██                              | 61kB 2.6MB/s eta 0:00:01\r\u001b[K     |██▎                             | 71kB 3.0MB/s eta 0:00:01\r\u001b[K     |██▋                             | 81kB 3.4MB/s eta 0:00:01\r\u001b[K     |███                             | 92kB 3.8MB/s eta 0:00:01\r\u001b[K     |███▎                            | 102kB 2.9MB/s eta 0:00:01\r\u001b[K     |███▋                            | 112kB 2.9MB/s eta 0:00:01\r\u001b[K     |████                            | 122kB 2.9MB/s eta 0:00:01\r\u001b[K     |████▎                           | 133kB 2.9MB/s eta 0:00:01\r\u001b[K     |████▋                           | 143kB 2.9MB/s eta 0:00:01\r\u001b[K     |█████                           | 153kB 2.9MB/s eta 0:00:01\r\u001b[K     |█████▎                          | 163kB 2.9MB/s eta 0:00:01\r\u001b[K     |█████▋                          | 174kB 2.9MB/s eta 0:00:01\r\u001b[K     |██████                          | 184kB 2.9MB/s eta 0:00:01\r\u001b[K     |██████▎                         | 194kB 2.9MB/s eta 0:00:01\r\u001b[K     |██████▋                         | 204kB 2.9MB/s eta 0:00:01\r\u001b[K     |███████                         | 215kB 2.9MB/s eta 0:00:01\r\u001b[K     |███████▎                        | 225kB 2.9MB/s eta 0:00:01\r\u001b[K     |███████▋                        | 235kB 2.9MB/s eta 0:00:01\r\u001b[K     |████████                        | 245kB 2.9MB/s eta 0:00:01\r\u001b[K     |████████▎                       | 256kB 2.9MB/s eta 0:00:01\r\u001b[K     |████████▋                       | 266kB 2.9MB/s eta 0:00:01\r\u001b[K     |█████████                       | 276kB 2.9MB/s eta 0:00:01\r\u001b[K     |█████████▎                      | 286kB 2.9MB/s eta 0:00:01\r\u001b[K     |█████████▋                      | 296kB 2.9MB/s eta 0:00:01\r\u001b[K     |██████████                      | 307kB 2.9MB/s eta 0:00:01\r\u001b[K     |██████████▎                     | 317kB 2.9MB/s eta 0:00:01\r\u001b[K     |██████████▋                     | 327kB 2.9MB/s eta 0:00:01\r\u001b[K     |███████████                     | 337kB 2.9MB/s eta 0:00:01\r\u001b[K     |███████████▎                    | 348kB 2.9MB/s eta 0:00:01\r\u001b[K     |███████████▋                    | 358kB 2.9MB/s eta 0:00:01\r\u001b[K     |████████████                    | 368kB 2.9MB/s eta 0:00:01\r\u001b[K     |████████████▎                   | 378kB 2.9MB/s eta 0:00:01\r\u001b[K     |████████████▋                   | 389kB 2.9MB/s eta 0:00:01\r\u001b[K     |█████████████                   | 399kB 2.9MB/s eta 0:00:01\r\u001b[K     |█████████████▎                  | 409kB 2.9MB/s eta 0:00:01\r\u001b[K     |█████████████▋                  | 419kB 2.9MB/s eta 0:00:01\r\u001b[K     |██████████████                  | 430kB 2.9MB/s eta 0:00:01\r\u001b[K     |██████████████▎                 | 440kB 2.9MB/s eta 0:00:01\r\u001b[K     |██████████████▋                 | 450kB 2.9MB/s eta 0:00:01\r\u001b[K     |███████████████                 | 460kB 2.9MB/s eta 0:00:01\r\u001b[K     |███████████████▎                | 471kB 2.9MB/s eta 0:00:01\r\u001b[K     |███████████████▋                | 481kB 2.9MB/s eta 0:00:01\r\u001b[K     |████████████████                | 491kB 2.9MB/s eta 0:00:01\r\u001b[K     |████████████████▎               | 501kB 2.9MB/s eta 0:00:01\r\u001b[K     |████████████████▋               | 512kB 2.9MB/s eta 0:00:01\r\u001b[K     |█████████████████               | 522kB 2.9MB/s eta 0:00:01\r\u001b[K     |█████████████████▎              | 532kB 2.9MB/s eta 0:00:01\r\u001b[K     |█████████████████▋              | 542kB 2.9MB/s eta 0:00:01\r\u001b[K     |██████████████████              | 552kB 2.9MB/s eta 0:00:01\r\u001b[K     |██████████████████▎             | 563kB 2.9MB/s eta 0:00:01\r\u001b[K     |██████████████████▋             | 573kB 2.9MB/s eta 0:00:01\r\u001b[K     |███████████████████             | 583kB 2.9MB/s eta 0:00:01\r\u001b[K     |███████████████████▎            | 593kB 2.9MB/s eta 0:00:01\r\u001b[K     |███████████████████▋            | 604kB 2.9MB/s eta 0:00:01\r\u001b[K     |████████████████████            | 614kB 2.9MB/s eta 0:00:01\r\u001b[K     |████████████████████▎           | 624kB 2.9MB/s eta 0:00:01\r\u001b[K     |████████████████████▋           | 634kB 2.9MB/s eta 0:00:01\r\u001b[K     |█████████████████████           | 645kB 2.9MB/s eta 0:00:01\r\u001b[K     |█████████████████████▎          | 655kB 2.9MB/s eta 0:00:01\r\u001b[K     |█████████████████████▋          | 665kB 2.9MB/s eta 0:00:01\r\u001b[K     |██████████████████████          | 675kB 2.9MB/s eta 0:00:01\r\u001b[K     |██████████████████████▎         | 686kB 2.9MB/s eta 0:00:01\r\u001b[K     |██████████████████████▋         | 696kB 2.9MB/s eta 0:00:01\r\u001b[K     |███████████████████████         | 706kB 2.9MB/s eta 0:00:01\r\u001b[K     |███████████████████████▎        | 716kB 2.9MB/s eta 0:00:01\r\u001b[K     |███████████████████████▋        | 727kB 2.9MB/s eta 0:00:01\r\u001b[K     |████████████████████████        | 737kB 2.9MB/s eta 0:00:01\r\u001b[K     |████████████████████████▎       | 747kB 2.9MB/s eta 0:00:01\r\u001b[K     |████████████████████████▋       | 757kB 2.9MB/s eta 0:00:01\r\u001b[K     |████████████████████████▉       | 768kB 2.9MB/s eta 0:00:01\r\u001b[K     |█████████████████████████▏      | 778kB 2.9MB/s eta 0:00:01\r\u001b[K     |█████████████████████████▌      | 788kB 2.9MB/s eta 0:00:01\r\u001b[K     |█████████████████████████▉      | 798kB 2.9MB/s eta 0:00:01\r\u001b[K     |██████████████████████████▏     | 808kB 2.9MB/s eta 0:00:01\r\u001b[K     |██████████████████████████▌     | 819kB 2.9MB/s eta 0:00:01\r\u001b[K     |██████████████████████████▉     | 829kB 2.9MB/s eta 0:00:01\r\u001b[K     |███████████████████████████▏    | 839kB 2.9MB/s eta 0:00:01\r\u001b[K     |███████████████████████████▌    | 849kB 2.9MB/s eta 0:00:01\r\u001b[K     |███████████████████████████▉    | 860kB 2.9MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▏   | 870kB 2.9MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▌   | 880kB 2.9MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▉   | 890kB 2.9MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▏  | 901kB 2.9MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▌  | 911kB 2.9MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▉  | 921kB 2.9MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████▏ | 931kB 2.9MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████▌ | 942kB 2.9MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████▉ | 952kB 2.9MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▏| 962kB 2.9MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▌| 972kB 2.9MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▉| 983kB 2.9MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 993kB 2.9MB/s \n",
-            "\u001b[?25h  Building wheel for PyDrive (setup.py) ... \u001b[?25l\u001b[?25hdone\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -99,7 +86,7 @@
       "metadata": {
         "id": "6ucrOW5eFV25",
         "colab_type": "code",
-        "outputId": "c21a0372-febc-4810-d8c1-0461c676bc6b",
+        "outputId": "8d84c32e-43ce-43a9-9518-9dd6c9e532d6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -109,7 +96,7 @@
         "fluff,id=link.split('=')\n",
         "print(id)"
       ],
-      "execution_count": 5,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -152,7 +139,7 @@
       "metadata": {
         "id": "BWNQLtCLGpNR",
         "colab_type": "code",
-        "outputId": "84b7b25f-fea9-484e-cf99-c14bce4a10cc",
+        "outputId": "b5e7368a-4e10-4f1e-c480-0a03c3b784a9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 223
@@ -162,7 +149,7 @@
         "df=pd.read_csv('twitter_sentiment_data.csv',engine='python')\n",
         "df.head()"
       ],
-      "execution_count": 8,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -258,7 +245,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 35
         }
       ]
     },
@@ -267,7 +254,7 @@
       "metadata": {
         "id": "CqiVXxvva0aM",
         "colab_type": "code",
-        "outputId": "9d040002-7248-406f-8cac-8e38ed3a287e",
+        "outputId": "5f73ab18-f91c-4277-aa43-80b70e38784b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -277,7 +264,7 @@
         "df.rename(columns={'0':'Target','1467810369':'ID','Mon Apr 06 22:19:45 PDT 2009':'Time_Info','NO_QUERY':'Query','_TheSpecialOne_':'UN',df.columns[5]:'Comments'},inplace=True)\n",
         "df"
       ],
-      "execution_count": 9,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -934,7 +921,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 36
         }
       ]
     },
@@ -953,7 +940,7 @@
       "metadata": {
         "id": "FUKMGIvAMwJf",
         "colab_type": "code",
-        "outputId": "e431972f-878d-4a68-99f9-2b3fb7f6ffa5",
+        "outputId": "de6270e5-fa6a-4502-9447-03bc1fa3e437",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 217
@@ -962,7 +949,7 @@
       "source": [
         "df.info()\n"
       ],
-      "execution_count": 10,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
@@ -988,7 +975,7 @@
       "metadata": {
         "id": "GdeMLY2ym_t0",
         "colab_type": "code",
-        "outputId": "fcb317c1-c978-4a2f-d024-2362a49fc3a8",
+        "outputId": "10cf58b2-0a3e-4271-e62e-c378115b7682",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 300
@@ -997,7 +984,7 @@
       "source": [
         "df.describe()"
       ],
-      "execution_count": 11,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1085,9 +1072,67 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 38
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7oPQmP9FnMiM",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Shortening Dataframe for ease of work**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "caNCDTVXX-aA",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Finding the longest and Shortest tweet**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RFwFp2ZUX9PL",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "tweet_len=df.Comments.str.len()\n",
+        "print(\"Length of Shortest Tweet:\",min(tweet_len))\n",
+        "print(\"Length of Longest Tweet:\",max(tweet_len))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FhCvm1ttaS8U",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Finding Polarity And Subjectivity Of Tweets**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "linN_w83ebeh",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from textblob import TextBlob"
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
