--- a/Movie_Sentimental_Analysis(Building_a_Classifier).ipynb
+++ b/Movie_Sentimental_Analysis(Building_a_Classifier).ipynb
@@ -1541,6 +1541,7 @@
         "colab": {}
       },
       "source": [
+        "import sklearn\n",
         "from sklearn.feature_extraction.text import TfidfVectorizer"
       ],
       "execution_count": 0,
@@ -7495,7 +7496,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 92
         },
-        "outputId": "5c93f0aa-2c2e-4f73-9774-a838d680c891"
+        "outputId": "e4a36d3d-2ae2-4fdb-fb88-29607b2ed39c"
       },
       "source": [
         "log_reg = LogisticRegression().fit(X_train,y_train)\n",
@@ -7503,7 +7504,7 @@
         "\n",
         "print('Accuracy on the test set: ',accuracy_score(y_test,y_predicted))"
       ],
-      "execution_count": 46,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "stream",
